--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -1,4 +1,6 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Lobster&display=swap");
+
+main {
   background-color: rgba(250, 250, 250, 255);
   /* 1번 */
   display: flex;
