--- a/src/pages/Main/Main.scss
+++ b/src/pages/Main/Main.scss
@@ -132,6 +132,7 @@ article {
   .feed {
     border: 1px solid #dbdbdb;
     border-radius: 3px;
+    width: 580px;
 
     .feed_id {
       position: relative;
@@ -186,25 +187,25 @@ article {
         }
         .more_details {
           position: relative;
-          right: -550px;
+          right: -530px;
 
-          img {
+          .more_img {
             display: flex;
             justify-content: flex-end;
             width: 30px;
             height: 30px;
-            padding-right: 5px;
           }
         }
       }
     }
-    .feed_picture {
-      width: 598px;
-      height: 598px;
-
-      img {
-        width: 598px;
-        height: 598px;
+    .img_area {
+      display: block;
+      width: 100%;
+      height: auto;
+      .feed_img {
+        display: block;
+        width: 100%;
+        height: auto; //feed 클래스에 넓이주고 두개다 이렇게 설정하는게 맞는가
       }
     }
     .feed_bottom {
@@ -317,20 +318,20 @@ article {
         justify-content: flex-start;
         align-items: flex-start;
         flex-direction: column;
-        padding: 0 150px 10px 16px;
+        padding: 0 50px 10px 16px;
 
         .comments_container {
           display: flex;
           padding-top: 5px;
           margin-bottom: 5px;
 
-          .who_comment {
+          .who_feed {
             font-weight: bold;
           }
-          .comments {
+          .feed_msg {
             padding-left: 5px;
           }
-          .comments1 {
+          .more_msg {
             padding: 2px;
             font-size: 16px;
             line-height: 18px;
@@ -343,11 +344,11 @@ article {
           align-items: flex-start;
           flex-direction: column;
 
-          p {
+          .who_comment {
             font-weight: bold;
             display: inline-block;
             margin: 0px 0px 5px 0px;
-            span {
+            .comment_msg {
               font-weight: normal;
               padding-left: 5px;
             }
@@ -452,152 +453,241 @@ article {
           color: #bababa;
           margin-top: 0;
           margin-bottom: 0;
+          span {
+            &:before {
+              content: "┃";
+            }
+          }
         }
       }
     }
   }
+  .side-story {
+    padding: 1rem;
+    margin-bottom: 1rem;
+    background: #fff;
+    border: 1px solid #e6e6e6;
+    border-radius: 5px;
+    height: 258px;
+    overflow-y: hidden;
+
+    .side-navigation {
+      margin-bottom: 1rem;
+      display: flex;
+      justify-content: space-between;
+
+      .story-title {
+        color: #bababa;
+        font-size: 14px;
+      }
+      .see-all {
+        color: rgb(73, 73, 73);
+        font-weight: 760;
+        font-size: 14px;
+      }
+    }
+    .story {
+      display: flex;
+
+      .story-img1 {
+        background: url(https://i.pinimg.com/564x/20/a1/58/20a158ec5418aa82ec1e167705351087.jpg)
+          no-repeat;
+        background-size: cover;
+        background-position: top;
+        width: 50px;
+        height: 50px;
+        margin-right: 1rem;
+        border: 2px solid #ed0086;
+        border-radius: 100%;
+      }
+      .story-text {
+        margin-top: 5px;
+        margin-bottom: 0.3rem;
+
+        .story-text-bold {
+          margin-top: 0.1rem;
+          font-weight: bold;
+        }
+        .story-text-color {
+          color: #bababa;
+        }
+      }
+    }
+    .story {
+      display: flex;
+      margin-bottom: 0.8rem;
+
+      .story-img2 {
+        background: url(https://i.pinimg.com/564x/59/e2/09/59e20910e1a70ba37e4571fd15971b55.jpg)
+          no-repeat;
+        background-size: cover;
+        background-position: top;
+        width: 50px;
+        height: 50px;
+        margin-right: 1rem;
+        border: 2px solid #ed0086;
+        border-radius: 100%;
+      }
+      .story-text {
+        margin-top: 5px;
+        margin-bottom: 0.3rem;
+
+        .story-text-bold {
+          margin-top: 0.1rem;
+          font-weight: bold;
+        }
+        .story-text-color {
+          color: #bababa;
+          margin-top: 0;
+        }
+      }
+    }
+    .story {
+      display: flex;
+      margin-bottom: 0.8rem;
+
+      .story-img3 {
+        background: url(https://i.pinimg.com/474x/ff/be/44/ffbe440cbebd92f0761aa4e12bbc0333.jpg)
+          no-repeat;
+        background-size: cover;
+        background-position: top;
+        width: 50px;
+        height: 50px;
+        margin-right: 1rem;
+        border: 2px solid #ed0086;
+        border-radius: 100%;
+      }
+      .story-text {
+        margin-top: 5px;
+        margin-bottom: 0.3rem;
+
+        .story-text-bold {
+          margin-top: 0.1rem;
+          font-weight: bold;
+        }
+        .story-text-color {
+          color: #bababa;
+          margin-top: 0;
+        }
+      }
+    }
+    .story {
+      display: flex;
+      margin-bottom: 0.8rem;
+
+      .story-img4 {
+        background: url(https://i.pinimg.com/564x/29/ab/14/29ab149d56f1b173e6853a5ad2817a2b.jpg)
+          no-repeat;
+        background-size: cover;
+        background-position: top;
+        width: 50px;
+        height: 50px;
+        margin-right: 1rem;
+        border: 2px solid #ed0086;
+        border-radius: 100%;
+      }
+      .story-text {
+        margin-top: 5px;
+        margin-bottom: 0.3rem;
+
+        .story-text-bold {
+          margin-top: 0.1rem;
+          margin-bottom: 0; //삭제하면 위에 3개는 변화없눈데 왜 얘만 그러지 ?
+          font-weight: bold;
+        }
+        .story-text-color {
+          color: #bababa;
+          margin-top: 0;
+        }
+      }
+    }
+  }
+  .side-recom {
+    padding: 1rem;
+    margin-bottom: 1rem;
+    background: #fff;
+    border: 1px solid #e6e6e6;
+    border-radius: 5px;
+
+    .side-navigation {
+      margin-bottom: 1rem;
+      display: flex;
+      justify-content: space-between;
+
+      .recom-title {
+        color: #bababa;
+        font-size: 14px;
+      }
+      .see-all {
+        color: rgb(73, 73, 73);
+        font-weight: 760;
+        font-size: 14px;
+      }
+    }
+    .side-wrap {
+      display: flex;
+      position: relative;
+
+      .sidewraps {
+        display: flex;
+
+        .side-img {
+          width: 50px;
+          height: 50px;
+          margin-right: 1rem;
+          border-radius: 100%;
+          margin-top: 8px;
+
+          background: url(https://i.pinimg.com/564x/59/f7/c0/59f7c0ddcb9eaf44e40fbf1d9fdb15e0.jpg)
+            no-repeat;
+          background-size: cover;
+          background-position: center;
+        }
+        .side-childs {
+          margin-top: 1rem;
+          .recom-name {
+            margin-bottom: 0.1rem;
+            margin-top: 0;
+            font-weight: bold;
+          }
+          .recom-info {
+            color: #bababa;
+            font-size: 14px;
+            margin-top: 0;
+          }
+        }
+      }
+    }
+    .follow {
+      padding: 1.5rem 0 1rem 1rem;
+      color: #0095f6;
+      background: none;
+      position: absolute;
+      right: 0;
+      border: none;
+      font-size: 0.9rem;
+      font-weight: 700;
+    }
+  }
+  .footer-wrapper {
+    .footer-content {
+      color: #acacac;
+      line-height: 1.2rem;
+      font-weight: 300;
+      font-size: 14px;
+    }
+    .version {
+      color: #acacac;
+      line-height: 1.2rem;
+      font-weight: 300;
+      font-size: 14px;
+    }
+  }
 }
 
-.side-container > :last-child div > :last-child span:before {
-  content: "┃";
-}
-
-.side-story {
-  padding: 1rem;
-  margin-bottom: 1rem;
-  background: #fff;
-  border: 1px solid #e6e6e6;
-  border-radius: 5px;
-  height: 258px;
-  overflow-y: hidden;
-}
-
-.side-navigation {
-  margin-bottom: 1rem;
-  display: flex;
-  justify-content: space-between;
-}
-
-.side-navigation span {
-  color: #bababa;
-}
-
-.see-all {
-  color: rgb(73, 73, 73);
-  font-weight: 760;
-  font-size: 14px;
-}
-
-.story {
-  display: flex;
-}
-
-.story > :first-child {
-  width: 50px;
-  height: 50px;
-  margin-right: 1rem;
-  border: 2px solid #ed0086;
-  border-radius: 100%;
-}
-
-.side-story > :nth-child(2),
-.side-story > :nth-child(3),
-.side-story > :nth-child(4) {
-  margin-bottom: 0.8rem;
-}
-
-.story-text {
-  margin-top: 5px;
+.side-recom > :nth-child(2),
+.side-recom > :nth-child(3) {
   margin-bottom: 0.3rem;
-}
-
-.story-text .bold {
-  margin-bottom: 0;
-}
-
-.story-text .color {
-  margin-top: 0;
-}
-
-.story-img1 {
-  background: url(https://i.pinimg.com/564x/20/a1/58/20a158ec5418aa82ec1e167705351087.jpg)
-    no-repeat;
-  background-size: cover;
-  background-position: top;
-}
-
-.story-img2 {
-  background: url(https://i.pinimg.com/564x/59/e2/09/59e20910e1a70ba37e4571fd15971b55.jpg)
-    no-repeat;
-  background-size: cover;
-  background-position: center;
-}
-
-.story-img3 {
-  background: url(https://i.pinimg.com/474x/ff/be/44/ffbe440cbebd92f0761aa4e12bbc0333.jpg)
-    no-repeat;
-  background-size: cover;
-  background-position: center;
-}
-
-.story-img4 {
-  background: url(https://i.pinimg.com/564x/29/ab/14/29ab149d56f1b173e6853a5ad2817a2b.jpg)
-    no-repeat;
-  background-size: cover;
-  background-position: center;
-}
-
-.bold {
-  margin-top: 0.1rem;
-  margin-bottom: 0.3rem;
-  font-weight: bold;
-}
-
-.color {
-  color: #bababa;
-}
-
-/*추천 시작*/
-.side-pick {
-  padding: 1rem;
-  margin-bottom: 1rem;
-  background: #fff;
-  border: 1px solid #e6e6e6;
-  border-radius: 5px;
-  /* position: relative; */
-}
-
-.side-pick > :nth-child(2),
-.side-pick > :nth-child(3) {
-  margin-bottom: 0.3rem;
-}
-
-.side-wrap {
-  display: flex;
-  position: relative;
-}
-
-.sidewraps {
-  display: flex;
-}
-
-.sidewraps > :last-child {
-  margin-top: 1rem;
-}
-
-.side-img {
-  width: 50px;
-  height: 50px;
-  margin-right: 1rem;
-  border-radius: 100%;
-  margin-top: 8px;
-}
-
-#side-wrap-img1 {
-  background: url(https://i.pinimg.com/564x/59/f7/c0/59f7c0ddcb9eaf44e40fbf1d9fdb15e0.jpg)
-    no-repeat;
-  background-size: cover;
-  background-position: center;
 }
 
 #side-wrap-img2 {
@@ -613,7 +703,7 @@ article {
   background-size: cover;
   background-position: center;
 }
-
+///////////
 .side-wrap > :first-child > :last-child > :first-child {
   margin-bottom: 0.1rem;
   margin-top: 0;
@@ -636,21 +726,4 @@ article {
   font-size: 0.9rem;
   font-weight: 700;
 }
-
-.footer-wrapper p {
-  color: #acacac;
-  line-height: 1.2rem;
-  /* margin-bottom: 1rem; */
-  font-weight: 300;
-  font-size: 14px;
-}
-
-.side-story span,
-.side-pick span {
-  display: block;
-  font-size: 14px;
-  /* margin-block-start: 1em;
-  margin-block-end: 1em;
-  margin-inline-start: 0px;
-  margin-inline-end: 0px; */
-}
+//////////
