--- a/src/pages/Main/Main.scss
+++ b/src/pages/Main/Main.scss
@@ -1,29 +1,29 @@
 /* header*/
-@import url("https://fonts.googleapis.com/css2?family=Lobster&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 $primary-color: white;
 $border-color: rgb(235, 233, 233);
 
 header {
+  position: fixed;
+  z-index: 20;
+  top: 0;
   width: 100%;
   height: 70px;
-  background-color: $primary-color;
   border-bottom: 1px solid $border-color;
-  position: fixed;
-  top: 0;
-  z-index: 20;
+  background-color: $primary-color;
 
   nav {
-    width: 1200px;
-    margin: 0 auto;
     display: flex;
     justify-content: space-between;
+    width: 1200px;
+    margin: 0 auto;
     padding-top: 13px;
   }
 }
 
 .logo {
-  width: 200px;
   display: flex;
+  width: 200px;
 
   .about-logo {
     width: 23px;
@@ -34,13 +34,13 @@ header {
     padding-left: 10px;
 
     .we {
-      font-family: "Lobster", cursive;
-      color: black;
-      font-size: 30px;
       padding-top: 3px;
+      color: black;
+      font-family: 'Lobster', cursive;
+      font-size: 30px;
 
       a:before {
-        content: "┃";
+        content: '┃';
         padding-right: 5px;
       }
     }
@@ -48,20 +48,20 @@ header {
 }
 
 .searchbar {
-  width: 250px;
   position: relative;
+  width: 250px;
 
   input {
     width: 100%;
-    padding: 6px 12px;
     margin-top: 6px;
-    background-color: rgba(238, 235, 235, 0.288);
+    padding: 6px 12px;
     border: 1px solid rgba(218, 217, 217, 0.767);
+    background-color: rgba(238, 235, 235, 0.288);
 
     input::placeholder {
-      text-align: center;
       background: url(https://cdn2.iconfinder.com/data/icons/ios-7-icons/50/search-512.png)
         no-repeat 35% center/15px 15px;
+      text-align: center;
       filter: invert(0.5);
     }
   }
@@ -69,11 +69,11 @@ header {
 
 /* 헤더 우측 아이콘들  */
 .nav {
+  display: flex;
+  position: relative;
+  justify-content: space-between;
   width: 120px;
   height: 45px;
-  display: flex;
-  justify-content: space-between;
-  position: relative;
 
   div {
     display: block;
@@ -83,35 +83,35 @@ header {
   .navo {
     background: url(https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/bearu/explore.png)
       no-repeat;
-    background-size: 100%;
     background-position: center;
+    background-size: 100%;
   }
 
   .navt {
     background: url(https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/bearu/heart.png)
       no-repeat;
-    background-size: 100%;
     background-position: center;
+    background-size: 100%;
 
     &::after {
-      content: "";
+      content: '';
       display: block;
-      width: 4px;
-      height: 4px;
-      border-radius: 50%;
-      background-color: red;
       position: absolute;
       bottom: 0px;
       left: 50%;
+      width: 4px;
+      height: 4px;
       transform: translateX(-50%);
+      border-radius: 50%;
+      background-color: red;
     }
   }
 
   .navh {
     background: url(https://s3.ap-northeast-2.amazonaws.com/cdn.wecode.co.kr/bearu/profile.png)
       no-repeat;
-    background-size: 100%;
     background-position: center;
+    background-size: 100%;
   }
 }
 
@@ -120,23 +120,23 @@ header {
 article {
   /* position: relative; */
   right: 0px;
-  border-radius: 3px;
-  background-color: #fafafa;
   margin-top: 1rem;
   margin-bottom: 3rem;
+  border-radius: 3px;
+  background-color: #fafafa;
 
   .feed_box {
     height: 100px;
   }
 
   .feed {
+    width: 580px;
     border: 1px solid #dbdbdb;
     border-radius: 3px;
-    width: 580px;
 
     .feed_id {
-      position: relative;
       display: flex;
+      position: relative;
       justify-content: center;
       height: 60px;
 
@@ -153,11 +153,11 @@ article {
         .id_box {
           display: flex;
           position: absolute;
+          top: -1px;
+          left: 0px;
           flex-direction: row;
           align-items: flex-start;
           justify-content: flex-start;
-          left: 0px;
-          top: -1px;
           width: 536px;
           height: 41px;
 
@@ -165,16 +165,16 @@ article {
             .id_img {
               width: 35px;
               height: 35px;
-              border-radius: 50%;
               padding-left: 5px;
+              border-radius: 50%;
             }
           }
           .id_container {
             display: flex;
             position: relative;
+            left: 10px;
             flex-direction: column;
             align-items: flex-start;
-            left: 10px;
 
             .id_name {
               font-size: 16px;
@@ -212,8 +212,8 @@ article {
       .emoticon_box {
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
         align-items: center;
+        justify-content: space-between;
         height: 40px;
         margin: 0px;
         padding: 3px 5px 0px 7px;
@@ -260,8 +260,8 @@ article {
         }
         .bookmark_box {
           display: flex;
-          justify-content: center;
           align-items: center;
+          justify-content: center;
           width: 40px;
           height: 40px;
 
@@ -275,20 +275,20 @@ article {
     .feed_like_box {
       display: flex;
       position: relative;
+      left: 8px;
       flex-direction: row;
       align-items: center;
       height: 30px;
-      left: 8px;
       padding: 0 16px 0 8px;
 
       .feed_like_picture {
         display: flex;
-        justify-content: center;
-        align-items: center;
-        border-radius: 50%;
         top: 15px;
         left: 10px;
+        align-items: center;
+        justify-content: center;
         border: 1px solid #dbdbdb;
+        border-radius: 50%;
 
         .feed_like_people {
           width: 20px;
@@ -297,8 +297,8 @@ article {
         }
       }
       p {
-        font-weight: bold;
         margin-left: 5px;
+        font-weight: bold;
 
         .feed_like {
           /* display: flex; */
@@ -310,20 +310,20 @@ article {
     }
     .feed_article {
       display: flex;
-      justify-content: flex-start;
       align-items: flex-start;
+      justify-content: flex-start;
 
       .feed_article_box {
         display: flex;
-        justify-content: flex-start;
-        align-items: flex-start;
         flex-direction: column;
+        align-items: flex-start;
+        justify-content: flex-start;
         padding: 0 50px 10px 16px;
 
         .comments_container {
           display: flex;
-          padding-top: 5px;
           margin-bottom: 5px;
+          padding-top: 5px;
 
           .who_feed {
             font-weight: bold;
@@ -333,24 +333,24 @@ article {
           }
           .more_msg {
             padding: 2px;
+            color: #8e8e8e;
             font-size: 16px;
             line-height: 18px;
-            color: #8e8e8e;
           }
         }
         .comments1_box {
           display: flex;
-          justify-content: flex-start;
-          align-items: flex-start;
           flex-direction: column;
+          align-items: flex-start;
+          justify-content: flex-start;
 
           .who_comment {
-            font-weight: bold;
             display: inline-block;
             margin: 0px 0px 5px 0px;
+            font-weight: bold;
             .comment_msg {
-              font-weight: normal;
               padding-left: 5px;
+              font-weight: normal;
             }
           }
         }
@@ -369,10 +369,10 @@ article {
           }
         }
         .comments2 {
-          font-size: 15px;
-          line-height: 30px;
           color: #8e8e8e;
+          font-size: 15px;
           letter-spacing: 0.3px;
+          line-height: 30px;
         }
       }
     }
@@ -382,7 +382,6 @@ article {
       justify-content: space-between;
       height: 50px;
       padding: 0 12px 0 12px;
-      /* margin: 0px; */
       border-top: 1px solid #efefef;
 
       .type_comment {
@@ -392,25 +391,25 @@ article {
         color: #8e8e8e;
 
         .inputBox {
-          background-color: #fafafa;
-          font: 14px;
-          color: black;
-          outline: none;
           width: 550px;
           height: 47px; /*50이면 선이 짤림*/
           border: solid 0px;
+          outline: none;
+          background-color: #fafafa;
+          color: black;
+          font: 14px;
         }
       }
       .buttonWrap {
         .buttonBox {
+          border: solid 0px;
+          outline: none;
           background-color: #fafafa;
           color: #c0e0fd;
-          outline: none;
-          border: solid 0px;
         }
         .submit {
-          font-size: 14px;
           color: #bee1fd;
+          font-size: 14px;
         }
       }
     }
@@ -422,9 +421,9 @@ article {
   width: 300px;
   margin-left: 2rem;
   .side-container {
-    margin-bottom: 2rem;
-    margin-top: -2rem;
     display: flex;
+    margin-top: -2rem;
+    margin-bottom: 2rem;
     cursor: pointer;
     .wecode-logo {
       &:first-child {
@@ -434,8 +433,8 @@ article {
         border-radius: 100%;
         background: url(https://pbs.twimg.com/profile_images/1109389733912666112/XX55fTPf.jpg)
           no-repeat;
-        background-size: cover;
         background-position: center;
+        background-size: cover;
       }
     }
     .wecode-info {
@@ -450,12 +449,12 @@ article {
           font-weight: bold;
         }
         & > :last-child {
-          color: #bababa;
           margin-top: 0;
           margin-bottom: 0;
+          color: #bababa;
           span {
             &:before {
-              content: "┃";
+              content: '┃';
             }
           }
         }
@@ -463,18 +462,18 @@ article {
     }
   }
   .side-story {
-    padding: 1rem;
+    height: 258px;
     margin-bottom: 1rem;
-    background: #fff;
+    padding: 1rem;
+    overflow-y: hidden;
     border: 1px solid #e6e6e6;
     border-radius: 5px;
-    height: 258px;
-    overflow-y: hidden;
+    background: #fff;
 
     .side-navigation {
-      margin-bottom: 1rem;
       display: flex;
       justify-content: space-between;
+      margin-bottom: 1rem;
 
       .story-title {
         color: #bababa;
@@ -482,23 +481,23 @@ article {
       }
       .see-all {
         color: rgb(73, 73, 73);
-        font-weight: 760;
         font-size: 14px;
+        font-weight: 760;
       }
     }
     .story {
       display: flex;
 
       .story-img1 {
-        background: url(https://i.pinimg.com/564x/20/a1/58/20a158ec5418aa82ec1e167705351087.jpg)
-          no-repeat;
-        background-size: cover;
-        background-position: top;
         width: 50px;
         height: 50px;
         margin-right: 1rem;
         border: 2px solid #ed0086;
         border-radius: 100%;
+        background: url(https://i.pinimg.com/564x/20/a1/58/20a158ec5418aa82ec1e167705351087.jpg)
+          no-repeat;
+        background-position: top;
+        background-size: cover;
       }
       .story-text {
         margin-top: 5px;
@@ -518,15 +517,15 @@ article {
       margin-bottom: 0.8rem;
 
       .story-img2 {
-        background: url(https://i.pinimg.com/564x/59/e2/09/59e20910e1a70ba37e4571fd15971b55.jpg)
-          no-repeat;
-        background-size: cover;
-        background-position: top;
         width: 50px;
         height: 50px;
         margin-right: 1rem;
         border: 2px solid #ed0086;
         border-radius: 100%;
+        background: url(https://i.pinimg.com/564x/59/e2/09/59e20910e1a70ba37e4571fd15971b55.jpg)
+          no-repeat;
+        background-position: top;
+        background-size: cover;
       }
       .story-text {
         margin-top: 5px;
@@ -537,8 +536,8 @@ article {
           font-weight: bold;
         }
         .story-text-color {
-          color: #bababa;
           margin-top: 0;
+          color: #bababa;
         }
       }
     }
@@ -547,15 +546,15 @@ article {
       margin-bottom: 0.8rem;
 
       .story-img3 {
-        background: url(https://i.pinimg.com/474x/ff/be/44/ffbe440cbebd92f0761aa4e12bbc0333.jpg)
-          no-repeat;
-        background-size: cover;
-        background-position: top;
         width: 50px;
         height: 50px;
         margin-right: 1rem;
         border: 2px solid #ed0086;
         border-radius: 100%;
+        background: url(https://i.pinimg.com/474x/ff/be/44/ffbe440cbebd92f0761aa4e12bbc0333.jpg)
+          no-repeat;
+        background-position: top;
+        background-size: cover;
       }
       .story-text {
         margin-top: 5px;
@@ -566,8 +565,8 @@ article {
           font-weight: bold;
         }
         .story-text-color {
-          color: #bababa;
           margin-top: 0;
+          color: #bababa;
         }
       }
     }
@@ -576,15 +575,15 @@ article {
       margin-bottom: 0.8rem;
 
       .story-img4 {
-        background: url(https://i.pinimg.com/564x/29/ab/14/29ab149d56f1b173e6853a5ad2817a2b.jpg)
-          no-repeat;
-        background-size: cover;
-        background-position: top;
         width: 50px;
         height: 50px;
         margin-right: 1rem;
         border: 2px solid #ed0086;
         border-radius: 100%;
+        background: url(https://i.pinimg.com/564x/29/ab/14/29ab149d56f1b173e6853a5ad2817a2b.jpg)
+          no-repeat;
+        background-position: top;
+        background-size: cover;
       }
       .story-text {
         margin-top: 5px;
@@ -596,23 +595,23 @@ article {
           font-weight: bold;
         }
         .story-text-color {
-          color: #bababa;
           margin-top: 0;
+          color: #bababa;
         }
       }
     }
   }
   .side-recom {
-    padding: 1rem;
     margin-bottom: 1rem;
-    background: #fff;
+    padding: 1rem;
     border: 1px solid #e6e6e6;
     border-radius: 5px;
+    background: #fff;
 
     .side-navigation {
-      margin-bottom: 1rem;
       display: flex;
       justify-content: space-between;
+      margin-bottom: 1rem;
 
       .recom-title {
         color: #bababa;
@@ -620,8 +619,8 @@ article {
       }
       .see-all {
         color: rgb(73, 73, 73);
-        font-weight: 760;
         font-size: 14px;
+        font-weight: 760;
       }
     }
     .side-wrap {
@@ -634,37 +633,37 @@ article {
         .side-img {
           width: 50px;
           height: 50px;
+          margin-top: 8px;
           margin-right: 1rem;
           border-radius: 100%;
-          margin-top: 8px;
 
           background: url(https://i.pinimg.com/564x/59/f7/c0/59f7c0ddcb9eaf44e40fbf1d9fdb15e0.jpg)
             no-repeat;
-          background-size: cover;
           background-position: center;
+          background-size: cover;
         }
         .side-childs {
           margin-top: 1rem;
           .recom-name {
-            margin-bottom: 0.1rem;
             margin-top: 0;
+            margin-bottom: 0.1rem;
             font-weight: bold;
           }
           .recom-info {
+            margin-top: 0;
             color: #bababa;
             font-size: 14px;
-            margin-top: 0;
           }
         }
       }
     }
     .follow {
-      padding: 1.5rem 0 1rem 1rem;
-      color: #0095f6;
-      background: none;
       position: absolute;
       right: 0;
+      padding: 1.5rem 0 1rem 1rem;
       border: none;
+      background: none;
+      color: #0095f6;
       font-size: 0.9rem;
       font-weight: 700;
     }
@@ -672,15 +671,15 @@ article {
   .footer-wrapper {
     .footer-content {
       color: #acacac;
-      line-height: 1.2rem;
-      font-weight: 300;
       font-size: 14px;
+      font-weight: 300;
+      line-height: 1.2rem;
     }
     .version {
       color: #acacac;
-      line-height: 1.2rem;
-      font-weight: 300;
       font-size: 14px;
+      font-weight: 300;
+      line-height: 1.2rem;
     }
   }
 }
@@ -693,36 +692,36 @@ article {
 #side-wrap-img2 {
   background: url(https://i.pinimg.com/564x/0d/4d/f5/0d4df5c7da2d7d8c064cbb904bf27c47.jpg)
     no-repeat;
-  background-size: cover;
   background-position: center;
+  background-size: cover;
 }
 
 #side-wrap-img3 {
   background: url(https://i.pinimg.com/564x/85/79/4f/85794f97c38e5369f3f747fb84e57980.jpg)
     no-repeat;
-  background-size: cover;
   background-position: center;
+  background-size: cover;
 }
 ///////////
 .side-wrap > :first-child > :last-child > :first-child {
-  margin-bottom: 0.1rem;
   margin-top: 0;
+  margin-bottom: 0.1rem;
   font-weight: bold;
 }
 
 .side-wrap > :first-child > :last-child > :last-child {
+  margin-top: 0;
   color: #bababa;
   font-size: 14px;
-  margin-top: 0;
 }
 
 .side-wrap > :last-child {
-  padding: 1.5rem 0 1rem 1rem;
-  color: #0095f6;
-  background: none;
   position: absolute;
   right: 0;
+  padding: 1.5rem 0 1rem 1rem;
   border: none;
+  background: none;
+  color: #0095f6;
   font-size: 0.9rem;
   font-weight: 700;
 }
