--- a/src/pages/Login/Login.scss
+++ b/src/pages/Login/Login.scss
@@ -1,11 +1,11 @@
-@import url("https://fonts.googleapis.com/css2?family=Lobster&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Lobster&display=swap');
 
 main {
-  background-color: rgba(250, 250, 250, 255);
   /* 1번 */
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
+  background-color: rgba(250, 250, 250, 255);
   /* font-family: "돋움", dotum, sans-serif; */
 
   /* 2번
@@ -18,7 +18,7 @@ position: relative
 wrap_box에 position: absolute를 주는 것*/
 }
 
-.wrap_box {
+.wrapBox {
   display: flex;
   flex-direction: column;
   width: 250px;
@@ -26,13 +26,64 @@ wrap_box에 position: absolute를 주는 것*/
   padding: 60px;
   border: 1px solid #eaeaea;
   background-color: white;
-}
-
-.westagram {
-  font-family: "Lobster", cursive;
-  font-size: 40px;
-  text-align: center;
-  margin-bottom: 30px;
+  .westagram {
+    margin-bottom: 30px;
+    font-family: 'Lobster', cursive;
+    font-size: 40px;
+    text-align: center;
+  }
+  .loginForm {
+    .loginWrap {
+      .loginId {
+        display: flex;
+        justify-content: center;
+        width: 220px;
+        height: 15px;
+        margin-bottom: 5px;
+        padding: 10px;
+        border: 1px solid #eaeaea;
+        border-radius: 3px;
+        background-color: #fafafa;
+        color: gray; /*연하게 못하나?*/
+        font-size: 12px;
+      }
+      .loginPw {
+        display: flex;
+        justify-content: center;
+        width: 220px;
+        height: 15px;
+        margin-bottom: 5px;
+        padding: 10px;
+        border: 1px solid #eaeaea;
+        border-radius: 3px;
+        background-color: #fafafa;
+        color: gray; /*연하게 못하나?*/
+        font-size: 12px;
+      }
+      .loginBtn {
+        width: 243px; /*왜 login_idpw랑 사이즈가 달라야하는가*/
+        height: 38px; /*왜 15px이 안되지 ?*/
+        margin-top: 10px;
+        margin-bottom: 120px;
+        padding: 10px;
+        border: 1px solid;
+        border-radius: 3px;
+        background-color: #c0dffd;
+        color: white;
+        font-size: 15px;
+        font-weight: bold;
+        &:hover {
+          cursor: pointer;
+        }
+      }
+    }
+    .forgotPw {
+      font-size: 13px;
+      text-align: center;
+      .pageMove {
+      }
+    }
+  }
 }
 
 /*.login_form {
@@ -41,44 +92,8 @@ wrap_box에 position: absolute를 주는 것*/
   width: 537px;
 }*/
 
-#login_id,
-#login_pw {
-  background-color: #fafafa;
-  padding: 10px;
-  font-size: 12px;
-  color: gray; /*연하게 못하나?*/
-  height: 15px;
-  width: 220px;
-  border-radius: 3px;
-  margin-bottom: 5px;
-  border: 1px solid #eaeaea;
-  display: flex;
-  justify-content: center;
-}
-
-.login_btn {
-  margin-top: 10px;
-  font-size: 15px;
-  font-weight: bold;
-  padding: 10px;
-  height: 38px; /*왜 15px이 안되지 ?*/
-  width: 243px; /*왜 login_idpw랑 사이즈가 달라야하는가*/
-  border-radius: 3px;
-  background-color: #c0dffd;
-  border: 1px solid;
-  margin-bottom: 120px;
-  color: white;
-}
-
 .login_btn:hover {
   cursor: pointer;
-}
-
-.forgot_pw {
-  text-align: center;
-  font-size: 13px;
-  /* font-family: "Courier New", Courier, monospace; */
-  /* 왜 이거는 폰트 적용이 안되는가 */
 }
 
 /* 로그인버튼 비활성화에서 활성화하는 코드
